prevent main head from breaking on small screens

--- a/front_end/css/less/module/reg-header.less
+++ b/front_end/css/less/module/reg-header.less
@@ -163,3 +163,19 @@
         }
     }
 }
+
+/* ==========================================================================
+ media queries
+ ========================================================================== */
+
+ @media (max-width: 800px) {
+    .main-head {
+        height: auto;
+        padding-top: 1.25em;
+        padding-bottom: 1.25em;
+
+        li {
+            line-height: 1.2;
+        }
+    }
+}
